@@ -92,7 +92,7 @@ class User < ActiveRecord::Base
 
   #----------------------------------------------------------------------------
   def suspended?
-    self.suspended_at
+    self.suspended_at != nil
   end
 
   #----------------------------------------------------------------------------
