@@ -1,18 +1,29 @@
 %li[user]{ highlightable(dom_id(user, :tools)) }
 
-  - if user.admin?
-    .strip{:class => "admin"} Admin
-  - elsif user.suspended?
+  - if user.suspended?
     .strip{:class => "suspended"} Suspended
+  - elsif user.admin?
+    .strip{:class => "admin"} Admin
   - else
     .strip{:class => "active"} Active
 
   = gravatar_for(user, :size => "30x30", :default => "#{request.protocol + request.host_with_port}/images/avatar.jpg")
   .tools{ invisible, :id => dom_id(user, :tools) }
     %small
-      = link_to("Edit", "#")    << " | "
-      = link_to("Suspend", "#") << " | "
-      = link_to("Delete", "#")  << "&nbsp;"
+      = link_to("Edit", "#") << " | "
+
+      - if user.suspended?
+        = link_to_reactivate(user) << " | "
+      - elsif user != @current_user
+        = link_to_suspend(user) << " | "
+      - else
+        = "<font color='silver'>Suspend!</font> | "
+
+      - if user != @current_user
+        = link_to("Delete!", "#") << "&nbsp;"
+      - else
+        <font color='silver'>Delete!</font>&nbsp;
+
   = link_to(user.full_name, user)
   %tt
     = user.title unless user.title.blank?
